# aws-bedrock-multipleagents-rag

./: .env.example  .envrc.example  .gitignore  .lintstagedrc.json  .oxlintrc.json  .prettierignore  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  cdk.context.json  package.json  pnpm-lock.yaml  requirements-ragas.txt  tsconfig.base.json
.codex/: AGENTS.md
.github/workflows/: rag-eval-schedule.yml  rag-eval.yml  ragas-regression-detection.yml  update-ragas-baseline.yml
.husky/: pre-push
apps/chat/: next.config.ts  package.json  tsconfig.json
apps/rag-service/: AGENTS.md  README.md  conftest.py  ingestion_handler.py  lambda_tool.py  pyproject.toml  requirements.txt
apps/rag-service/app/: __init__.py  adaptive_reflection_router.py  answer_generator.py  bedrock_action.py  bedrock_embedding_client.py  chunker.py  community_detection.py  config.py  crag.py  decomposition_retriever.py  document_manager.py  document_parser.py  embedding_factory.py  entity_extraction.py  entity_extraction_models.py  entity_vector_store.py  eval_metrics.py  faithfulness_grader.py  graph_repository.py  graph_retriever.py  hybrid_fusion.py  hyde_integration_example.py  hyde_retriever.py  ingestion.py  ingestion_models.py  ingestion_repository.py  main.py  models.py  prompts.py  query_cache.py  query_decomposer.py  query_processing.py  query_router.py  qwen_client.py  relevance_grader.py  repository.py  reranker.py  secrets.py  self_reflection_models.py  self_reflection_node.py  (+2 more)
apps/rag-service/layers/doc-parsing/: requirements.txt
apps/rag-service/scripts/: __main__.py  analyze_orphans.py  apra_urls.txt  audit_graph_quality.py  backfill_opensearch.py  backfill_pgvector_from_neo4j.py  cleanup_graph.py  crawl_ingest.py  debug_neo4j_neighbors.py  debug_relation_extraction.py  eval_runner.py  extract_entities.py  generate_eval_dataset.py  populate_communities.py  reembed_all.py  test_crawl_distribution.py  test_db_conn.py  test_gliner_glirel.py  test_rag_queries.py  verify_entity_data.py
apps/rag-service/scripts/examples/: generated-eval-draft-v2.jsonl  generated-eval-draft-v2.md  generated-eval-draft.jsonl  generated-eval-draft.md
apps/rag-service/tests/: test_answer_generator.py  test_bedrock_action.py  test_bedrock_embedding_client.py  test_chunker.py  test_community_detection.py  test_crag.py  test_decomposition_retriever.py  test_decomposition_retriever_integration.py  test_delete_endpoint.py  test_document_manager.py  test_document_parser.py  test_entity_extraction.py  test_entity_vector_store.py  test_faithfulness_grader.py  test_graph_repository.py  test_graph_retriever.py  test_hybrid_fusion.py  test_hyde_retriever.py  test_ingestion.py  test_ingestion_handler.py  test_ingestion_repository.py  test_query_cache.py  test_query_decomposer.py  test_query_processing.py  test_query_router.py  test_qwen_client.py  test_relevance_grader.py  test_repository_opensearch.py  test_repository_retrieve.py  test_reranker.py  test_secrets.py  test_self_reflection.py  test_self_reflection_node.py  test_streaming.py  test_tracing.py  test_upload_endpoint.py  test_workflow.py
apps/rag-service/tests/eval/: conftest.py  golden_dataset.json  test_deepeval_quality.py  test_graph_metrics.py  test_ragas_benchmark.py
apps/rag-service/tests/fixtures/: sample.html  sample.md  sample.txt
docs/: adr-nextjs-lambda-deployment-2026.md  adr-nextjs-lambda-multi-zones-phase2-architecture.md  adr-query-decomposition.md  adr-self-reflection.md  crag-design.md  entity-vector-store-ddl.sql  experiment-journal-ingest-query.md  feature-benchmark-phase1-validation-2026-04.md  hybrid-rag-execution-plan.md  hyde-design.md  hyde-production-guide.md  lightrag-migration-plan.md  nextjs-lambda-deployment-matrix-2026.md  nextjs-lambda-deployment-startup-guide.md  nextjs-lambda-multi-zones-implementation-checklist.md  nextjs-multizones-deployment-guide.md  phase1-phase2-migration-checklist.md  phase1.5-document-ingestion-plan.md  postgres-pgvector-ddl.sql  qwen-plus-entity-extraction-spec.md  rag-caching-plan.md  rag-caching-research.md  rag-gap-analysis.md  rag-hallucination-risk-analysis.md  ragas-reference-writing-guide.md  self-reflection-integration-guide.md
eval/: thresholds.json
scripts/: benchmark_features.sh  eval-agent.ts  eval-work-search.ts  power-instances.sh  ragas_baseline.py  ragas_ci_gate.py  ragas_eval.py  test-agent.ts  test-gateway.ts
(+34 files in other folders)
