[project]
name = "hybrid-rag-service"
version = "0.1.0"
description = "Python Hybrid RAG runtime for Bedrock action group and local FastAPI service"
requires-python = ">=3.12"
dependencies = [
  "boto3>=1.34.0,<2",
  "fastapi[standard]>=0.115.0,<1",
  "langgraph>=0.2.0,<1",
  "opensearch-py>=2.7.0,<3",
  "pydantic-settings>=2.6.0,<3",
  "psycopg[binary]>=3.2.0,<4",
  "pymupdf>=1.24.0,<2",
  "python-docx>=1.1.0,<2",
  "python-multipart>=0.0.9,<1",
  "beautifulsoup4>=4.12.0,<5",
  "lxml>=5.0.0,<6",
  "sqlalchemy>=2.0.0,<3",
  "uvicorn[standard]>=0.30.0,<1",
]

[project.optional-dependencies]
test = [
  "pytest>=8.4.0,<9",
  "pytest-cov>=6.0.0,<7",
]
lint = [
  "black>=25.1.0,<26",
  "ruff>=0.13.0,<1",
]

[tool.pytest.ini_options]
pythonpath = ["apps/rag-service"]
testpaths = ["apps/rag-service/tests"]
addopts = "-q --ignore=packages --ignore=node_modules"
norecursedirs = ["cdk.out", ".venv", "dist", "*.egg-info", "layers"]

[tool.black]
line-length = 100
target-version = ["py312"]
include = "\\.pyi?$"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"
